# sumsum-bot

./: AGENTS.md  README.md  main.py  paper_trader.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backtest/: runner.py
config/: __init__.py  kill_switches.py  settings.py  weather_locations.py
core/: __init__.py  backtester.py  clob_client.py  kelly_engine.py  market_scanner.py  models.py  paper_execution.py  paper_runtime.py  performance.py  risk_manager.py  storage.py  trade_logger.py
data/: trades.db
docs/: prd.md  strategy.md
strategies/: __init__.py
strategies/btc_5min/: __init__.py  scanner.py  signal_engine.py
strategies/sports/: __init__.py  comparator.py  odds_client.py  scanner.py
strategies/weather/: __init__.py  edge_calculator.py  noaa_client.py  normalization.py  scanner.py  signal_engine.py  types.py
tests/: conftest.py
tests/fixtures/: polymarket_weather_markets.json
tests/integration/: test_market_scan.py  test_noaa_signal_engine.py  test_paper_runtime.py  test_paper_storage.py  test_polymarket_ingestion.py  test_risk_storage.py  test_signal_risk_gate.py  test_signal_storage.py  test_storage.py
tests/unit/: test_filter_rules.py  test_kelly_engine.py  test_noaa_client.py  test_paper_execution.py  test_performance_metrics.py  test_project_layout.py  test_risk_manager.py  test_settings.py  test_weather_edge_calculator.py  test_weather_normalization.py
(+55 files in other folders)
