[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sumsum-bot"
version = "0.1.0"
description = "Weather-first Polymarket paper-trading bot"
readme = "docs/prd.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "strategies*"]
exclude = ["tests*", "data*", "backtest*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
